--- a/styles/style.css
+++ b/styles/style.css
@@ -1,1 +1,408 @@
 /* место для вашего кода */
+.wrapper{
+  display:flex;
+  flex-direction: column;
+  min-height:100vh;
+}
+.content{
+  flex:1;
+}
+.header{
+ height:-5px;
+ width:100px;
+  padding:20px 10px;
+  font-size:15px;
+  display:flex;
+  align-items:center;
+  margin-right:1px;
+  position:relative;
+  top:40px;
+  left:-10px;
+}
+
+
+.profile-header {
+  position: fixed;
+  z-index:2;
+  background-color:#fff;
+  padding:0px 150px;
+  box-shadow:0 2px 4px rgba(0,0,0,0.1);
+  font-size:20px;
+  color:#000000;
+  width:10000px;
+  height:150px;
+
+}
+.profile-header .container {
+  display:flex;
+  align-items:center;
+  justify-content: space-between;
+  flex-wrap: wrap;
+
+}
+.logo-and-title {
+  display: flex;
+  align-items:center;
+  border-radius:90px;
+  margin-left:-125px;
+  margin-bottom:-45px;
+}
+.logo {
+  height:100px;
+  width: auto;
+ position:relative;
+ top:10px;
+
+
+}
+.site-title {
+  font-size:20px;
+  color:#000;
+  margin:0;
+  margin-top:-3px;
+}
+.main-menu {
+  display:flex;
+  align-items: center;
+  gap:15px;
+  flex-wrap:wrap;
+  position:relative;
+  transition: background-color 0.3s;
+}
+.main-menu a {
+  text-decoration:none;
+  color:#000000;
+  font-weight:bold;
+  padding: 8px 12px;
+  border-radius:4px;
+  transition:background 0.3s;
+}
+.main-menu a:hover {
+  color:#bdbdbd;
+  transition: transform 0.3s;
+}
+
+.order-btn {
+  background-color:#fff;
+  color:#fff;
+  font-weight: bold;
+}
+.order-btn:hover {
+  background-color:#fff;
+}
+.social-icons {
+  display:flex;
+  align-items: center;
+  gap: 10px;
+}
+.social-icon {
+  display:flex;
+  align-items: center;
+  justify-content:center;
+  width:40px;
+  height:40px;
+  background-color:#555;
+  color:#fff;
+  font-size:20px;
+  transition: background-color 0.3s;
+  text-decoration: none;
+}
+.social-icon:hover {
+  background-color:#333;
+}
+.container{
+  margin:20px;
+  }
+.contact-info {
+  font-family: Arial, sans-serif;
+  font-size: 14px;
+  border:none;
+  gap:500px;
+}
+.contact-info a {
+  text-decoration: none;
+  color:black;
+  text-decoration: none;
+  color: inherit;
+  border:none;
+}
+.contact-info a:hover {
+  color:#bdbdbd;
+  transition:transform 0.3s;
+}
+
+.full-screen-section {
+  position:relative;
+  width:100%;
+  HEIGHT: 88vh;
+  top:80px;
+  background-image:  url('image/lotus-flower (3).png');
+  background-size: cover;
+  background-position:center;
+  display:flex;
+  align-items: center;
+  justify-content: center;
+  padding-top:100px;
+}
+.centered-text1 {
+  position:absolute;
+  top:85px;
+  left:175px;
+  font-size:80px;
+  color:#fff;
+  font-family:Arial, sans-serif;
+}
+
+.centered-text2 {
+  position:absolute;
+  top:42%;
+  left:35%;
+  transform: translate (-50%, -50%);
+  font-size:80px;
+  color:#fff;
+  font-family: Arial,sans-serif;
+}
+
+.centered-text3 {
+  position:absolute;
+  bottom: 90px;
+  right:400px;
+  font-size: 80px;
+  color:#fff;
+  font-family: Arial, sans-serif;
+}
+.text1{
+   position: absolute;
+   font-family: Arial, sans-serif;
+   font-size:80px;
+   color:#fff;
+   left:35%;
+   bottom:50px;
+   font-size:20px;
+}
+.button {
+  position:absolute;
+  bottom:20px;
+  right:20px;
+  padding:15px 25px;
+  font-size:20px;
+  background-color:#000;
+  color:white;
+  border:none;
+  border-radius:15px;
+  cursor:pointer;
+ transition: background-color 0.3s;
+  }
+
+  .button:hover {
+    background-color:#f5f5f5;
+    color:black;
+  }
+  .sonic1   {
+    display:flex;
+    font-family: Arial,sans-serif;
+    font-size:70px;
+    color:#000;
+    margin: 0 auto;
+    width:32%;
+    TEXT-ALIGN:  CENTER;
+    margin-top:150px;
+    margin-left:600px;
+  }
+
+.sonic2 {
+ margin-left: 600px;
+ font-size: 18px;
+vertical-align: top;
+margin-top:-300px;
+}
+.sonic10 {
+ margin-left: 600px;
+ font-size: 18px;
+margin-bottom:50px;
+}
+.pho1o{
+  margin-right:-50px;
+  margin-left:200px;
+  width:250px;
+  height:250px;
+  margin-bottom:100px;
+  padding:10px 20px;
+}
+.big-block{
+  padding:20px;
+  background-color:#f7f7f7;
+}
+.big-block h1{
+  text-align:center;
+  margin-bottom:20px;
+}
+.cards-container{
+  display:flex;
+  gap:20px;
+}
+.card{
+  flex:1;
+  background:#fff;
+  padding:10px;
+  border-radius:8px;
+  box-shadow: 0 2px 5px rgba(0,0,0,0.1);
+  transition:tranform 0.3s, box-shadow 0.3s;
+  cursor:pointer;
+}
+
+  .card:hover {
+  transform: scale(1.05);
+  box-shadow: 0 4px 15px rgba(0,0,0,0.3);
+  transition: transform 0.3s ease;
+}
+
+
+
+.card h2{
+  color:#000;
+  margin-top:0;
+  font-size:1.2em;
+}
+.card h2, .card p{
+  color:#000;
+  transition: color 0.3s;
+  font-size:25px;
+}
+.card p {
+  color:#000;
+  font-size:1em;
+}
+.card img {
+  width:100%;
+  height:auto;
+  border-radius:10px;
+  filter: brightness(50%);
+  transition: filter 0.3s;
+}
+
+.card:hover img {
+  filter: brightness(100%);
+}
+
+.footer{
+
+  background-color:#ececec;
+  padding:10px 0px  !important;
+  font-family: Arial, sans-serif;
+  text-align:center;
+  margin-bottom:-200px;
+}
+
+.title-text {
+  position:relative;
+  text-align:center;
+  bottom:-20px;
+}
+
+
+ .footer-left {
+   position:relative;
+   float:left;
+   left:-70px;
+   width:50%;
+   bottom:-50px;
+}
+
+.footer-center{
+  display:inline-block;
+  width:100%;
+  text-align:center;
+  position:relative;
+  bottom:100px;
+}
+.footer-center p:hover {
+  color:#bdbdbd;
+}
+
+ .footer-right{
+  float:right;
+   position:relative;
+  bottom:250px;
+  left:-250px;
+}
+
+.footer h2 {
+   margin-bottom:10px;
+   position:relative;
+   right:10px;
+   bottom:18px;
+
+}
+.footer h3 {
+   position:relative;
+   left:80px;
+   bottom:10px;
+   font-size:20px;
+
+}
+.footer h4 {
+   margin-bottom:10px;
+   position:relative;
+   right:0px;
+   bottom:-5px;
+   font-size:25px;
+
+}
+
+ .footer p {
+   font-size:16px;
+   margin-bottom:10px;
+}
+
+.footer a {
+  color:#f0f0f0;
+  text-decoration:none;
+}
+
+.footer a:hover {
+  text-decoration:underline;
+}
+
+.social-icons {
+  display: flex;
+  gap: 10px;
+  justify-content: flex-end;
+  margin-top: 10px;
+}
+
+.social-icons a {
+  display: inline-block;
+  width:40px;
+  height:40px;
+  background-color:#444;
+  border-radius:50%;
+  display:flex;
+  align-content:center;
+  justify-content:center;
+  transition: background-color 0.3s;
+}
+
+.social-icons a:hover {
+  background-color:#666;
+}
+
+.social-icons svg {
+  width:20px;
+  height:20px;
+  fill:#f0f0f0;
+}
+.footer-bottom{
+  position:relative;
+  text-align:center;
+  justify-content: center;
+  color:#999;
+  font-size:14px;
+  top:70px;
+  right:325px;
+
+}
+
+
+
+
